@@ -36,9 +36,8 @@ ENUM(action_id_t,
   EDIT_REDO,
   EDIT_SELECT_ALL,
   EDIT_MARK,
+  EDIT_CHAR_DETAILS,
   EDIT_INSERT_CHAR,
-  TOOLS_INDENT_SELECTION,
-  TOOLS_UNINDENT_SELECTION,
   EDIT_PASTE_SELECTION,
   EDIT_TOGGLE_INSERT,
   EDIT_DELETE_LINE,
@@ -63,6 +62,8 @@ ENUM(action_id_t,
   WINDOWS_PREV_WINDOW,
   HELP_HELP,
   HELP_ABOUT,
+  TOOLS_INDENT_SELECTION,
+  TOOLS_UNINDENT_SELECTION,
   TOOLS_HIGHLIGHTING,
   TOOLS_STRIP_SPACES,
   TOOLS_AUTOCOMPLETE,
